--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -1,6 +1,6 @@
 export(allelic_kinetics, allelic_plot, diff_allelic_bursting, tech_bias,  Estep,
        gene_classify, Mstep, non_ind_bursting, output_table, pb.moment)
-import(rje)
+import(rje, tsne, scatterplot3d)
 importFrom("grDevices", "dev.off", "pdf")
 importFrom("graphics", "abline", "barplot", "grid", "legend", "par", "plot",
            "points", "text", "title")
